--- a/frontend/src/pages/PostsPage.scss
+++ b/frontend/src/pages/PostsPage.scss
@@ -11,4 +11,10 @@
     padding: 1rem;
     margin: 1.2rem;
   }
+
+  &__commentator {
+    font-size: 1.2rem;
+    padding-bottom: 1rem;
+    padding-right: 2rem;
+  }
 }
